<resources>
  <string name="app_name">GankIo</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_about">关于</string>
  <string name="press_again_exit">再按一次退出程序</string>
  <string name="loading">正在加载中…</string>
  <string name="empty">什么都没有</string>

  <!--WebAcitivity-->
  <string name="webview_action_copy_url">复制链接</string>
  <string name="webview_action_open_url">打开链接</string>
  <string name="tip_open_fail">打开失败，没有找到可以打开该链接的其它应用 :(</string>
  <string name="tip_copy_done">复制成功</string>
  <string name="card_content">gank.io的非官方Android客户端。</string>
  <string name="gallery_save">保存到本地</string>
  <string name="share">分享</string>
  <string name="action_share">分享</string>
  <string name="share_meizhi_to">分享妹纸到…</string>
  <string name="webview_action_share">分享</string>
  <string name="app_name_with_introduce">技术和妹纸我都要</string>
  <string name="introduce_and_help"><![CDATA[介绍&帮助]]></string>
  <string name="introduce">http://gank.io 的非官方 Android 客户端。每个工作日一张妹子图和一些技术干货。感谢稳如泰山的 zizhuai.liu 的 UI 设计。感谢 @代码家 提供的 Api。部分页面参考了 https://github.com/drakeet/Meizhi， 感谢 @drakeet。\n\n这是我的第一个完整的业余 App，从中感受到了创造的乐趣。用到的一些流行的框架：RxJava 2.x + Dagger2 + Retrofit + MVP + Glide
    。\n项目开源地址：https://github.com/lwj1994/GankIo</string>
  <string name="developers">开发者</string>
  <string name="developer">Android 开发</string>
  <string name="uiDesigner">UI 设计</string>
  <string name="open_source_lis">使用的开源库</string>
  <string name="open_source_libraries_list">com.android.support:appcompat-v7:25.1.1\ncom.android.support:recyclerview-v7:25.1.1\ncom.android.support:design:25.1.1\ncom.android.support:support-v4:25.1.1\ncom.android.support:cardview-v7:25.1.1\ncom.elvishew:xlog:1.2.1\ncom.blankj:utilcode:1.3.4\ncom.github.bumptech.glide:glide:3.7.0\ncom.github.bumptech.glide:okhttp3-integration:1.4.0@aar\ncom.davemorrissey.labs:subsampling-scale-image-view:3.6.0\njp.wasabeef:glide-transformations:2.0.1\nio.reactivex.rxjava2:rxjava:2.0.2\nio.reactivex.rxjava2:rxandroid:2.0.1\ncom.squareup.retrofit2:retrofit:2.1.0\ncom.squareup.retrofit2:converter-gson:2.1.0\ncom.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0\ncom.squareup.okhttp3:okhttp:3.5.0\ncom.squareup.okio:okio:1.11.0\ncom.squareup.okhttp3:logging-interceptor:3.5.0\ncom.google.dagger:dagger:2.8\ncom.jakewharton:butterknife:8.4.0\ncom.squareup.leakcanary:leakcanary-android:1.4-beta2\ncom.github.moduth:blockcanary-android:1.2.1\n
  </string>
  <string name="action_select_date">按日期选择干货</string>
  <string name="action_search">搜索</string>
  <string name="action_post_gank">投稿</string>

  <!--投稿-->
  <string name="post_gank_url_titile">想要提交的网页地址</string>
  <string name="post_gank_des_titile">对干活内容的描述</string>
  <string name="post_gank_who_titile">提交者 ID（干货提交者的网络 ID）</string>
  <string name="post_gank_type_title">干货类型</string>

</resources>
