<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

  <android.support.design.widget.AppBarLayout
      android:id="@+id/about_appbar"
      android:layout_width="match_parent"
      android:layout_height="@dimen/about_header_height"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      >

    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/about_collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:contentScrim="?attr/colorPrimary"
        app:expandedTitleTextAppearance="@style/CollapsingToolbarTitleStyle"
        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/about_header_height"
          android:background="@color/colorAccent"
          android:gravity="center"
          android:orientation="vertical"
          >

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="24dp"
            android:src="@mipmap/ic_launcher"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/app_name_with_introduce"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            tools:text="Version 1.0"
            />
      </LinearLayout>

      <android.support.v7.widget.Toolbar
          android:id="@+id/about_toolbar"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          android:background="@android:color/transparent"
          app:layout_collapseMode="pin"
          />

    </android.support.design.widget.CollapsingToolbarLayout>

  </android.support.design.widget.AppBarLayout>

  <android.support.v4.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/about_card_margin"
        >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="12dp"
          android:text="@string/introduce_and_help"
          android:textColor="@android:color/darker_gray"
          />

      <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:layout_marginStart="10dp"
          android:background="@drawable/bg_about_card"
          >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autoLink="web"
            android:text="@string/introduce"
            android:textIsSelectable="true"
            android:textSize="14sp"
            />

      </FrameLayout>

      <View
          android:layout_width="match_parent"
          android:layout_height="0.6dp"
          android:layout_marginTop="12dp"
          android:background="@color/gankDividor"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="12dp"
          android:layout_marginTop="12dp"
          android:text="@string/developers"
          android:textColor="@android:color/darker_gray"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:layout_marginStart="10dp"
          android:background="@drawable/bg_about_card"
          android:orientation="vertical"
          android:padding="5dp"
          >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >

          <ImageView
              android:id="@+id/about_avatar_amaze"
              android:layout_width="@dimen/avatar_size"
              android:layout_height="@dimen/avatar_size"
              android:layout_margin="5dp"
              android:src="@mipmap/ic_launcher"
              tools:ignore="ContentDescription"
              />
          <LinearLayout
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:orientation="vertical"
              >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Amaze"
                tools:ignore="HardcodedText"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                />

          </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >
          <ImageView
              android:id="@+id/about_avatar_zishuai"
              android:layout_width="@dimen/avatar_size"
              android:layout_height="@dimen/avatar_size"
              android:layout_margin="5dp"
              android:src="@mipmap/ic_launcher"
              tools:ignore="ContentDescription"
              />

          <LinearLayout
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:orientation="vertical"
              >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="zishuaiLiu"
                tools:ignore="HardcodedText"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uiDesigner"
                />

          </LinearLayout>

        </LinearLayout>

      </LinearLayout>

      <View
          android:layout_width="match_parent"
          android:layout_height="0.6dp"
          android:layout_marginTop="12dp"
          android:background="@color/gankDividor"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="12dp"
          android:layout_marginTop="12dp"
          android:text="@string/open_source_lis"
          android:textColor="@android:color/darker_gray"
          />

      <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:layout_marginEnd="10dp"
          android:layout_marginStart="10dp"
          android:background="@drawable/bg_about_card"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/open_source_libraries_list"
            tools:ignore="HardcodedText"
            />

      </FrameLayout>

    </LinearLayout>
  </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>